--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 Hello there, awesome person!
 <html>
+    <head>
+        <title>I am a title!</title>
+    </head>
+</html>
     <body>
         The HTML content goes here.
     </body>
