--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ Hello there, awesome person!
 <html>
     <head>
         <title>I am a title!</title>
+  <link rel="stylesheet" href="style.css">
     </head>
     <body>
 <h1>I'm a header 1!</h1>
@@ -15,5 +16,6 @@ Hello there, awesome person!
   ```
   <li><a href="https://github.com">This is a link to GitHub!</a></li>
   ```
+ 
     </body>
 </html>
